--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,55 @@
 # Terraform directories
 **/.terraform/*
-.*
+.terraform/
+.terraform.lock.hcl
+
+# Terraform binaries
+terraform
+terraform.exe
+
+# Terraform state files
+*.tfstate
+*.tfstate.*
+*.tfstate.backup
+
+# Terraform variable files
+*.tfvars
+!terraform.tfvars.example
+
+# Terraform plan files
+*.tfplan
+
+# Crash log files
+crash.log
+
+# Exclude all .tfvars files, which are likely to contain sensitive data
+*.auto.tfvars
+
+# Ignore override files as they are usually used to override resources locally
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Include override files you do wish to add to version control using negated pattern
+# !example_override.tf
+
+# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
+# example: *tfplan*
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
+
+# Patch files
+*.patch
+
+# Archive files
+*.tar.gz
+*.zip
+*.tar
+
+oci-terraform-ansible/terraform.tfstate.backup
+oci-terraform-ansible/terraform.tfstate
+oci-terraform-ansible/.terraform.lock.hcl
+oci-terraform-ansible/terraform.tfvars
