--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ oci-terraform-ansible/terraform.tfstate.backup
 oci-terraform-ansible/terraform.tfstate
 oci-terraform-ansible/.terraform.lock.hcl
 oci-terraform-ansible/terraform.tfvars
+oci-terraform-ansible/terraform.tfstate
+oci-terraform-ansible/terraform.tfstate.backup
